# snake-arena

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  koyeb.yaml  openapi.yaml  package.json  render.yaml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: database.py  main.py  models.py  security.py  seed.py  store.py
backend/app/routers/: auth.py  games.py  scores.py
backend/tests/: conftest.py  test_auth.py  test_games.py  test_scores.py
backend/tests_integration/: conftest.py  test_flows.py
frontend/: generate-index.mjs  package-lock.json  vite.config.ts
frontend/src/components/: SnakeBoard.tsx  SnakeGame.tsx
frontend/src/lib/: auth-context.tsx  snake-engine.test.ts  theme-context.tsx
frontend/src/routes/: __root.tsx  index.tsx  play.tsx  signup.tsx  watch.index.tsx
frontend/src/services/: index.ts  realApi.ts
src/lib/: snake-engine.ts
src/routes/: __root.tsx  leaderboard.tsx  login.tsx  watch.$id.tsx
src/services/: mockApi.test.ts  mockApi.ts  types.ts
